clusters/prod/p1/apps/pocket-id/pocket-id.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 90
            failureThreshold: 2
          volumeMounts:
            - name: pocket-id-data
              mountPath: /app/backend/data
      volumes:
        - name: pocket-id-data
          persistentVolumeClaim:
            claimName: pocket-id-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 80
  tls:
    - hosts:
        - pocket-id-p1
